Bug 497935 - Inapplicable column headings for investment reports
Summary: Inapplicable column headings for investment reports
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.1.90
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-27 10:19 UTC by Ralf Habacker
Modified: 2024-12-29 19:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
test file (8.01 KB, text/xml)
2024-12-27 10:19 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-12-27 10:19:03 UTC
Created attachment 176900 [details]
test file

SUMMARY
The investment reports contain columns with the term ‘balance’, e.g. ‘Starting balance’ and ‘Ending balance’. According to the implementation, however, a market value is calculated. The labelling could be improved to avoid confusion.

STEPS TO REPRODUCE
1.  download kmymoney snapshot from https://cdn.kde.org/ci-builds/office/kmymoney/master/
2.  start kmymoney and load append test file
3.  show report "Investment Performance by Account (custom report - period)"

OBSERVED RESULT
The above report contains column headings ‘Starting balance’ and ‘Ending balance’.

EXPECTED RESULT
The relevant columns should be labelled ‘Starting market value’ and ‘Ending market value’.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12

ADDITIONAL INFORMATION
Other reports in this category are also affected
Comment 1 Bug Janitor Service 2024-12-27 16:26:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/kmymoney/-/merge_requests/247
Comment 2 Ralf Habacker 2024-12-29 19:02:24 UTC
Git commit 29806af2f1628e11b692e2d575026eeb5458fbb9 by Ralf Habacker.
Committed on 29/12/2024 at 13:32.
Pushed by habacker into branch 'master'.

Use better variable and map key names in implementation of investment reports

The variables for the starting and ending balance actually contain
market values and there are variables for the starting and ending
prices instead of just one price.
FIXED-IN:5.2

M  +6    -0    kmymoney/plugins/views/reports/core/listtable.cpp
M  +3    -1    kmymoney/plugins/views/reports/core/listtable.h
M  +63   -58   kmymoney/plugins/views/reports/core/querytable.cpp
M  +5    -3    kmymoney/plugins/views/reports/core/tests/querytable-test.cpp

https://invent.kde.org/office/kmymoney/-/commit/29806af2f1628e11b692e2d575026eeb5458fbb9
Comment 3 Ralf Habacker 2024-12-29 19:02:32 UTC
Git commit 5c2d5cd723dc8b6d2e182b12dbff5b5553671d8f by Ralf Habacker.
Committed on 29/12/2024 at 13:32.
Pushed by habacker into branch 'master'.

Add report test file for investments

Only a single price is used for the transactions of the security `BHP`
in order to be able to reproduce the calculation more easily.

M  +1    -0    kmymoney/plugins/views/reports/core/tests/data/CMakeLists.txt
A  +6    -0    kmymoney/plugins/views/reports/core/tests/data/Investment Capital Gains by Account (Customized).xml
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Holdings-by-Account-_Customized_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year--start-later_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Performance-by-Account-_Customized---from-period---one-year_.csv
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-investment-report-querytable-Investment-Performance-by-Account-_Customized---from-period---three-year_.csv
A  +148  -0    kmymoney/plugins/views/reports/core/tests/data/test-investment.xml

https://invent.kde.org/office/kmymoney/-/commit/5c2d5cd723dc8b6d2e182b12dbff5b5553671d8f