Use better variable and map key names in implementation of investment reports

The variables for the starting and ending balance actually contain
market values and there are variables for the starting and ending
prices instead of just one price.

BUG:497935
FIXED-IN:5.2